--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ rayon = "1.7.0"
 tokio = { version = "1.24.1", features = ["rt-multi-thread", "sync", "macros"] }
 reqwest = { version = "0.11.18", features = ["json"] }
 axum = { version = "0.6.1", features = ["ws"] }
-engine = { path = "../../../layern/nord/engine/" }
+engine = { path = "../../nord/engine/" }
 secp256k1 = { version = "0.27.0", features = ["global-context", "rand-std", "bitcoin-hashes-std"] }
 
 [patch.crates-io]
